--- a/Client/index.html
+++ b/Client/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    // SDK MercadoPago.js
+    <!-- SDK MercadoPago.js -->
     <script src="https://sdk.mercadopago.com/js/v2"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Security-Policy" content="" />
@@ -32,5 +32,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://sdk.mercadopago.com/js/v2"></script>
   </body>
 </html>
